[tool.poetry]
name = "b8-vm"
version = "0.1.0"
description = ""
authors = ["mmatlin <33261504+mmatlin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.scripts]
block8_vm = "b8_vm.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
