[tool.poetry]
name = "block_8"
version = "0.1.0"
description = ""
authors = ["mmatlin <33261504+mmatlin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.7.4"

[tool.poetry.scripts]
block_8_vm = "block_8.b8_vm.__main__:run_from_entry_point"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
